fooda.com (archived on 2017-03-31)
{
  "alexa_rank": 77879,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9651,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.36,
  "homepage_snapshot_redirected_domain": "fooda.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170515204709id_/https://www.fooda.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170515204709id_/http%3A//fooda.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "fooda.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170331001236id_/https%3A//www.fooda.com/privacy-policy",
  "policy_title": "Privacy Policy | Fooda",
  "policy_url": "fooda.com/privacy-policy",
  "sha1": "92251795e291f30516f9e3a93b8f99b04e99284e",
  "simhash": 17563466693646043152,
  "simhash_updated": false,
  "site_hostname": "fooda.com",
  "site_url": "http://fooda.com",
  "smog": 14.22,
  "strict_updated": false,
  "timestamp": "20170331001236",
  "word_count": 1584,
  "year": 2017
}

--- a/f/fo/foo/fooda.com.html
+++ b/f/fo/foo/fooda.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fooda.com privacy policy that was archived on 2016-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161223235742id_/https%3A//www.fooda.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fooda.com privacy policy that was archived on 2017-03-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170331001236id_/https%3A//www.fooda.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +18,10 @@ mixpanel.init("dd42cf42bf50ba49e46a75fee8f20eb7", {"cross_subdomain_cookie":fals
 <link rel="canonical" href="https://www.fooda.com/privacy-policy">
 <link rel="shortlink" href="https://www.fooda.com/node/8765">
   <title>Privacy Policy | Fooda</title>
-  <link type="text/css" rel="stylesheet" href="https://d9btsj20g6z5n.cloudfront.net/css/css_sNxBOgfaXg3l9RNAh00fcmrPI3PMpUHv1rpBZbU5u3c.css" media="all">
-  <script src="https://d9btsj20g6z5n.cloudfront.net/js/js_A3lCFpyfu19Sv0WG7qKTh8ZZOygw665_bd8E-W3aYeA.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://d9btsj20g6z5n.cloudfront.net/css/css_LqTpYq-SdOanJAcpyIAgXQ83RY-gap2sII546D0GSKI.css" media="all">
+  <script src="https://d9btsj20g6z5n.cloudfront.net/js/js_cbQKUC5K06hhxzMEmEK-ehXaeGTQBT70S4r-cRYBltA.js"></script>
 <script>jQuery(function() { Authcache.init(); });</script>
-<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"fooda_apr2015","theme_token":"VOrCVRKsr4jKLJBPJYNpU9MTsVuupkZ9_Lw5NyhYM6A","js":{"sites\/all\/themes\/bootstrap\/js\/bootstrap.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/external\/jquery.cookie.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/modules\/custom\/fooda_common\/fooda_common.js":1,"sites\/all\/modules\/contrib\/authcache\/authcache.js":1,"0":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/jquery.browser.min.js":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.min.js":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.bootstrap.min.js":1,"sites\/all\/modules\/contrib\/mixpanel\/mixpanel.js":1,"sites\/all\/modules\/contrib\/panels\/js\/panels.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/bootstrap.min.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/jquery.placeholder.min.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/smart-app-banner.js":1},"css":{"modules\/system\/system.base.css":1,"sites\/all\/modules\/contrib\/date\/date_api\/date.css":1,"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/authcache\/authcache.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/smartboxzen\/styles\/font-awesome.css":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.css":1,"sites\/all\/modules\/contrib\/proximity\/openlayers_proximity.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/smart-app-banner.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/bootstrap.min.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/blog_style.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/style.css":1}},"mixpanel":{"defaults":{"ip":"104.223.135.52","$browser":"Firefox","$os":"Windows","$device":"","$referrer":"https:\/\/www.fooda.com\/","$referring_domain":"www.fooda.com","channel":"web"},"people":[],"library_version":"2.0"},"bootstrap":{"anchorsFix":0,"anchorsSmoothScrolling":1,"popoverEnabled":1,"popoverOptions":{"animation":1,"html":0,"placement":"right","selector":"","trigger":"click","title":"","content":"","delay":0,"container":"body"},"tooltipEnabled":1,"tooltipOptions":{"animation":1,"html":0,"placement":"auto left","selector":"","trigger":"hover focus","delay":0,"container":"body"}}});</script>
+<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"fooda_apr2015","theme_token":"grMpE3NdCTnKSC9x87P_C2UeMUwJE5DfDrdq5vSwAvE","js":{"sites\/all\/themes\/bootstrap\/js\/bootstrap.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/all\/modules\/contrib\/jquery_update\/replace\/ui\/external\/jquery.cookie.js":1,"sites\/all\/modules\/contrib\/admin_menu\/admin_devel\/admin_devel.js":1,"sites\/all\/modules\/custom\/fooda_common\/fooda_common.js":1,"sites\/all\/modules\/contrib\/authcache\/authcache.js":1,"0":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/jquery.browser.min.js":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.min.js":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.bootstrap.min.js":1,"sites\/all\/modules\/contrib\/mixpanel\/mixpanel.js":1,"sites\/all\/modules\/contrib\/panels\/js\/panels.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/bootstrap.min.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/jquery.placeholder.min.js":1,"sites\/all\/themes\/fooda_apr2015\/js\/smart-app-banner.js":1},"css":{"modules\/system\/system.base.css":1,"sites\/all\/modules\/contrib\/date\/date_api\/date.css":1,"sites\/all\/modules\/contrib\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/field\/theme\/field.css":1,"sites\/all\/modules\/contrib\/views\/css\/views.css":1,"sites\/all\/modules\/contrib\/authcache\/authcache.css":1,"sites\/all\/modules\/contrib\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/smartboxzen\/styles\/font-awesome.css":1,"sites\/all\/modules\/custom\/fooda_common\/formValidation\/formValidation.css":1,"sites\/all\/modules\/contrib\/proximity\/openlayers_proximity.css":1,"sites\/all\/modules\/contrib\/panels\/css\/panels.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/smart-app-banner.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/bootstrap.min.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/blog_style.css":1,"sites\/all\/themes\/fooda_apr2015\/css\/style.css":1}},"mixpanel":{"defaults":{"ip":"207.241.229.227","$browser":"","$os":"","$device":"","$referrer":"https:\/\/www.fooda.com\/","$referring_domain":"www.fooda.com","channel":"web"},"people":[],"library_version":"2.0"},"bootstrap":{"anchorsFix":0,"anchorsSmoothScrolling":1,"popoverEnabled":1,"popoverOptions":{"animation":1,"html":0,"placement":"right","selector":"","trigger":"click","title":"","content":"","delay":0,"container":"body"},"tooltipEnabled":1,"tooltipOptions":{"animation":1,"html":0,"placement":"auto left","selector":"","trigger":"hover focus","delay":0,"container":"body"}}});</script>
 
 <!--[if lt IE 9]>
 <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -105,7 +105,13 @@ mixpanel.init("dd42cf42bf50ba49e46a75fee8f20eb7", {"cross_subdomain_cookie":fals
             <li><a href="/cafeteria-replacement">Cafeteria Replacement</a></li>
           </ul>
         </li>
-        <li><a href="/restaurant-partners">For Restaurants</a></li>
+        <li class="dropdown">
+          <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">For Restaurants <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/restaurant-partners">About Fooda Restaurant Partnerships</a></li>
+            <li><a href="/restaurant-partners#contact-fooda">Become a Restaurant Partner</a></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Us <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -317,7 +323,7 @@ Fooda does not track users across the web, nor does Fooda authorize the collecti
   <div class="gray-section" style="padding-bottom: 0;">
 <div class="container">
 <center>
-Fooda is available in Atlanta, Boston, Chicago, Los Angeles, Nashville, New York City, and Philadelphia
+Fooda is available in Atlanta, Boston, Chicago, Dallas, Los Angeles, Nashville, New York City, and Philadelphia
 </center>
 </div>
 </div>
@@ -359,7 +365,11 @@ Fooda is available in Atlanta, Boston, Chicago, Los Angeles, Nashville, New York
           </ul>
         </div>
         <div class="col-sm-5ths">
-          <h5><a href="/restaurant-partners">For Restaurants</a></h5>
+          <h5>For Restaurants</h5>
+          <ul>
+            <li><a href="/restaurant-partners">About Fooda Restaurant Partnerships</a></li>
+            <li><a href="/restaurant-partners#contact-fooda">Become a Restaurant Partner</a></li>
+          </ul>
         </div>
         <div class="col-sm-5ths">
           <h5>About Us</h5>
@@ -390,7 +400,7 @@ Fooda is available in Atlanta, Boston, Chicago, Los Angeles, Nashville, New York
         <span class="spaced-bar">&nbsp;</span>
         363 W. Erie St, #500 West, Chicago, IL 60654
         <span class="spaced-bar">&nbsp;</span>
-        O: 312.650.9440
+        O: 312.662.6539
         <span class="spaced-bar">&nbsp;</span>
         F: 312.264.0673
         <span class="spaced-bar">&nbsp;</span>
@@ -401,7 +411,7 @@ Fooda is available in Atlanta, Boston, Chicago, Los Angeles, Nashville, New York
     <hr>
     <div class="container">
       <div class="clearfix text-center">
-        <small style="padding-top: 0.6em; display: inline-block; color: #aaa;">Copyright © 2016 Fooda, Inc. All Rights Reserved.</small>
+        <small style="padding-top: 0.6em; display: inline-block; color: #aaa;">Copyright © 2017 Fooda, Inc. All Rights Reserved.</small>
       </div>
     </div>
 
