linkemperor.com (archived on 2017-03-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 6367,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "linkemperor.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170325133142id_/https://www.linkemperor.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170325133142id_/http%3A//linkemperor.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "linkemperor.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170331051426id_/https%3A//www.linkemperor.com/privacy-policy",
  "policy_title": "Privacy Policy | Link Emperor",
  "policy_url": "linkemperor.com/privacy-policy",
  "sha1": "455b8edfe16a1e89c71b171f1b880a1b39d8b080",
  "simhash": 7808297370251921353,
  "simhash_updated": false,
  "site_hostname": "linkemperor.com",
  "site_url": "http://linkemperor.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170331051426",
  "word_count": 1002,
  "year": 2017
}

--- a/l/li/lin/linkemperor.com.html
+++ b/l/li/lin/linkemperor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the linkemperor.com privacy policy that was archived on 2016-03-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160315121407id_/https%3A//www.linkemperor.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the linkemperor.com privacy policy that was archived on 2017-03-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170331051426id_/https%3A//www.linkemperor.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" itemscope="" itemtype="htp://schema.org/Product"><!--<![endif]--><head>
   <script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script src="//cdn.optimizely.com/js/198273052.js"></script>
@@ -94,7 +94,7 @@ window._fbq.push(['track', '6021289522214', {'value':'0.00','currency':'USD'}]);
       <p><a href="https://app.linkemperor.com/subscriptions/new?plan=soldier">Join Now for Only $7!</a></p>
      </div>
      <p class="links">
-      Call us:  (720) GOOD-SEO |
+      Call us: (702) 476-6603 |
       <a href="/pricing">Plans and Pricing</a> |
       <a href="https://app.linkemperor.com/">Log In</a>
      </p>
