--- a/j/je/jed/jedec.org.html
+++ b/j/je/jed/jedec.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jedec.org privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221142413id_/http%3A//www.jedec.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jedec.org privacy policy that was archived on 2017-03-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170331142749id_/http%3A//www.jedec.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -15,9 +15,9 @@
 <link rel="alternate" type="application/rss+xml" title="JEDEC RSS Feed" href="/feeds/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="Documents and Standards Feed" href="/feeds/documents.xml">
 <link rel="alternate" type="application/rss+xml" title="News and Media Coverage Feed" href="/news/rss.xml">
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_1408fa56cc9db4a431cff61bc51b4d06.css">
-<link type="text/css" rel="stylesheet" media="screen,projection" href="/sites/default/files/css/css_62c18ef81cf73417e5cbad4f78acd3a8.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_0953da86bf8f881e21943fdbfc914ddb.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_329e702688dacd4838acfea67bb490fc.css">
+<link type="text/css" rel="stylesheet" media="screen,projection" href="/sites/default/files/css/css_17b1493cc52584f568fed236649f8dc6.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/default/files/css/css_8418d2ff1a3855912a0a13a3e947d861.css">
   <!--[if IE ]>
     <link rel="stylesheet" href="/sites/all/themes/blueprint/blueprint/blueprint/ie.css" type="text/css" media="screen, projection">
   	<link href="/sites/all/themes/blueprint/css/ie.css" rel="stylesheet"  type="text/css"  media="screen, projection" />
@@ -83,7 +83,7 @@
 <li class="expanded menu-mlid-2002"><a href="/standards-documents" title="">Standards &amp; Documents</a><ul class="menu"><li class="leaf first menu-mlid-3482"><a href="/standards-documents" title="">Search Standards &amp; Documents</a></li>
 <li class="expanded menu-mlid-3391"><a href="/standards-documents/technology-focus-areas" title="Technology Focus Areas">Technology Focus Areas</a><ul class="menu"><li class="leaf first menu-mlid-1518 has-children"><a href="/category/technology-focus-area/flash-memory-ssds-ufs-emmc" title="Flash Memory: SSDs, UFS, e-MMC™">Flash Memory: SSDs, UFS, e.MMC</a></li>
 <li class="leaf menu-mlid-1768"><a href="/category/technology-focus-area/mobile-memory-lpddr-wide-io-memory-mcp" title="Mobile Memory: LPDDR2, Memory MCP">Mobile Memory: LPDDR, Wide I/O, Memory MCP</a></li>
-<li class="leaf menu-mlid-1544"><a href="/category/technology-focus-area/main-memory-ddr3-ddr4-sdram" title="Main Memory: DDR3 SDRAM">Main Memory: DDR3 &amp; DDR4 SDRAM</a></li>
+<li class="leaf menu-mlid-1544"><a href="/category/technology-focus-area/main-memory-ddr3-ddr4-sdram" title="Main Memory: DDR3 SDRAM">Main Memory: DDR3, DDR4 &amp; DDR5 SDRAM</a></li>
 <li class="leaf menu-mlid-14450"><a href="/category/technology-focus-area/3d-ics" title="3D-ICs">3D-ICs</a></li>
 <li class="leaf menu-mlid-1769"><a href="/category/technology-focus-area/memory-module-design-file-registrations" title="Memory Module Design File Registrations">Memory Module Design File Registrations</a></li>
 <li class="leaf menu-mlid-1519"><a href="/category/technology-focus-area/lead-free-manufacturing" title="Lead-Free Manufacturing">Lead-Free Manufacturing</a></li>
@@ -117,12 +117,17 @@
 <li class="leaf last menu-mlid-1060"><a href="/committees/jc-649" title="">JC-64: Embedded Memory Storage and Removable Memory Cards</a></li>
 </ul></li>
 <li class="expanded menu-mlid-393"><a href="/news" title="News">News</a><ul class="menu"><li class="leaf first menu-mlid-687"><a href="/news/pressreleases">Press Releases</a></li>
-<li class="leaf menu-mlid-21937"><a href="/awards-2016" title="JEDEC Awards Program: 2016 Honorees">JEDEC Awards Program: 2016 Honorees</a></li>
+<li class="leaf menu-mlid-22825"><a href="/awards-2017" title="JEDEC Awards Program: 2017 Honorees">JEDEC Awards Program: 2017 Honorees</a></li>
 <li class="leaf menu-mlid-21720"><a href="/china-tg" title="JEDEC Quality &amp; Reliability Task Group in China">JEDEC Quality &amp; Reliability Task Group in China</a></li>
 <li class="leaf last menu-mlid-1716"><a href="/news/media-kit" title="Media Kit">Media Kit</a></li>
 </ul></li>
 <li class="expanded menu-mlid-394"><a href="/events-meetings" title="Events &amp; Meetings">Events &amp; Meetings</a><ul class="menu"><li class="leaf first menu-mlid-9804"><a href="/events-meetings" title="">All Events &amp; Meetings</a></li>
+<li class="leaf menu-mlid-9789"><a href="http://www.jedec.org/home/gaas" title="">ROCS Workshop (GaAs)</a></li>
+<li class="expanded menu-mlid-21301"><a href="/serverforum-2017" title="Server Forum: Save the Date">Server Forum</a><ul class="menu"><li class="leaf first last menu-mlid-22832"><a href="/server-forum-agenda" title="Server Forum Agenda">Server Forum Agenda</a></li>
+</ul></li>
 <li class="leaf menu-mlid-22155"><a href="/mobile-iot-tech-2016" title="Mobile &amp; IOT Forum Taiwan">Mobile &amp; IOT Forum: Taiwan</a></li>
+<li class="leaf menu-mlid-22822"><a href="/node/16592" title="Mobile &amp; IOT Forum Korea: Save the Date">Mobile &amp; IOT Forum: Korea</a></li>
+<li class="leaf menu-mlid-22824"><a href="/memory-workshops-2017" title="JEDEC Memory Workshops: DDR5, NVDIMM-P, DRAM Tutorial">JEDEC Memory Workshops: DDR5, NVDIMM-P, DRAM Tutorial</a></li>
 <li class="leaf menu-mlid-20821"><a href="/ddr4workshop" title="JEDEC DDR4 Workshop: Presentations for Sale">DDR4 Workshop: Presentations for Sale</a></li>
 <li class="leaf last menu-mlid-21251"><a href="/rocs-digest-sale" title="ROCS Workshop: Papers Available for Purchase">ROCS Workshop: Papers for Sale</a></li>
 </ul></li>
@@ -183,7 +188,7 @@
 <input type="submit" name="op" id="edit-submit" value="Log in" class="form-submit">
 <div class="item-list"><ul><li class="first"><a href="/user/register" title="Create a new user account.">Create new account</a></li>
 <li class="last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li>
-</ul></div><input type="hidden" name="form_build_id" id="form-f2d257bf8509b1add226573d1fd685f4" value="form-f2d257bf8509b1add226573d1fd685f4">
+</ul></div><input type="hidden" name="form_build_id" id="form-47c02fee16911095de8b40930823702e" value="form-47c02fee16911095de8b40930823702e">
 <input type="hidden" name="form_id" id="edit-user-login-block" value="user_login_block">
 
 </div></form>
@@ -195,14 +200,14 @@
   </div>
 
     
-  <script type="text/javascript" src="/sites/default/files/js/js_64694acd1b3d0dfb24ea8cc58e49ee24.js"></script>
+  <script type="text/javascript" src="/sites/default/files/js/js_3b68898fc5e763a3677af76990f928ce.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/default/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": false, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": false } });
 //--><!]]>
 </script>
 
-  <script type="text/javascript" src="/sites/default/files/js/js_b223ff5a13f1bc22b90fc5cef2f0be22.js"></script>
+  <script type="text/javascript" src="/sites/default/files/js/js_fb260e964767403785a0585dcf595153.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -217,7 +222,7 @@ try{var pageTracker = _gat._getTracker("UA-4881587-1");pageTracker._trackPagevie
                   <div id="block-block-6" class="block block-block region-odd odd region-count-1 count-3">
 
 
-  <div class="content"><p>Copyright © 2016 JEDEC®. All Rights Reserved. <a href="/termsofuse">Terms &amp; Conditions of Use</a> | <a href="/privacy">Privacy Policy</a> | <a href="/contact">Contact Us</a> | <a href="/sitemap">Site Map</a> | <a href="/refund">Refund Policy</a> |&nbsp;<a href="/user/admin/login">Administrative Login</a></p>
+  <div class="content"><p>Copyright © 2017 JEDEC®. All Rights Reserved. <a href="/termsofuse">Terms &amp; Conditions of Use</a> | <a href="/privacy">Privacy Policy</a> | <a href="/contact">Contact Us</a> | <a href="/sitemap">Site Map</a> | <a href="/refund">Refund Policy</a> |&nbsp;<a href="/user/admin/login">Administrative Login</a></p>
 <div>&nbsp;</div></div>
   
 </div>
