--- a/w/wo/wor/worldslastchance.com.html
+++ b/w/wo/wor/worldslastchance.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldslastchance.com privacy policy that was archived on 2016-08-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160803194757id_/https%3A//www.worldslastchance.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldslastchance.com privacy policy that was archived on 2017-04-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170401142250id_/https%3A//www.worldslastchance.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" xmlns:og="http://opengraph.org/schema/"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -23,41 +23,11 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			
             <!--<link href='http://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>-->
-            <link href="https://www.worldslastchance.com/assets/css/front/css_compress-original.css?ver=1.1.5" rel="stylesheet" type="text/css">
+            <link href="https://www.worldslastchance.com/assets/css/front/css_compress-original.css?ver=1486566481" rel="stylesheet" type="text/css">
 
             <link href="https://www.worldslastchance.com/assets/css/front/css_compress-rtl.css" rel="stylesheet" type="text/css">
             <link rel="shortcut icon" href="https://www.worldslastchance.com/images/favicon_home.ico">
-            <script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=000993172113723111222:kj7-onlwmho"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.4"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-            <script src="https://www.worldslastchance.com/assets/js/front/js_combine.js" type="text/javascript"></script>
-            <script type="text/javascript">
-                var base_url = 'https://www.worldslastchance.com/';
-                function goToByScroll(id) {
-                    $('html,body').animate({scrollTop: $("#" + id).offset().top}, 'slow');
-                }
-            </script>
-            
-            <!--[if lte IE 7]>
-                    <link href="https://www.worldslastchance.com/assets/css/front/ie7.css" rel="stylesheet" type="text/css" media="screen" />                
-            <![endif]-->
-            <!--[if gte IE 9]>
-                    <link href="https://www.worldslastchance.com/assets/css/front/ie9.css" rel="stylesheet" type="text/css" media="screen" />                
-            <![endif]-->
-            <script type="text/javascript">
-                var _gaq = _gaq || [];
-                _gaq.push(['_setAccount', 'UA-7714890-1']);
-                _gaq.push(['_trackPageview']);
-
-                (function () {
-                    var ga = document.createElement('script');
-                    ga.type = 'text/javascript';
-                    ga.async = true;
-                    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-                    var s = document.getElementsByTagName('script')[0];
-                    s.parentNode.insertBefore(ga, s);
-                })();
-
-            </script>
-
+            <script type="text/javascript" async="" src="https://www.google.com/cse/cse.js?cx=000993172113723111222:kj7-onlwmho"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.4"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     </head>
 
     <body id="bg" class="wlcpage">
@@ -115,7 +85,7 @@
                         </div>                   
                         <div class="width100 float-left">
                             <p class="line">Gregorian Date</p>
-                            <p>August&nbsp;03,&nbsp;2016</p>
+                            <p>April&nbsp;01,&nbsp;2017</p>
                         </div>
                     </div>
                     <!--- end Date -->
@@ -300,7 +270,8 @@
                     <li><a href="https://www.worldslastchance.com/videos/non-wlc-videos">Non-WLC Videos</a></li>
                     <li><a href="https://www.worldslastchance.com/about-us/wlc-content-directory.html">WLC Content Directory</a></li>
                     <li><a href="https://www.worldslastchance.com/bible-answers-and-more">Bible Answers and More</a></li>                    
-                    <li><a href="https://www.worldslastchance.com/get-out-of-her-my-people">Get out of her, My people!</a></li>                    
+                    <li><a href="https://www.worldslastchance.com/get-out-of-her-my-people">Get out of her, My people!</a></li>           
+					<li><a href="https://www.worldslastchance.com/freedom-from-sexual-immorality.html">Freedom from Sexual Immorality</a></li>
                     <li><a href="https://www.worldslastchance.com/topical-biblical-studies">Topical Biblical Studies (eBooks)</a></li>
 
                     <li><a href="https://www.worldslastchance.com/the-kjv-audio-bible.html">Free KJV Bible download (audio)</a></li>
@@ -421,7 +392,7 @@
 
                                     <div style=" float:right">
                         <span class="tooltips" id="example-target-word">
-                            <a target="_blank" href="https://1888.org/pdf/1440994252-privacy-policy.pdf"><img src="https://www.worldslastchance.com/assets/images/front/pdf-icon.png"></a>
+                            <a target="_blank" href="https://1888.org/pdf/1474338536-privacy-policy.pdf"><img src="https://www.worldslastchance.com/assets/images/front/pdf-icon.png"></a>
                         </span>
                         <div class="tooltip-content" id="example-content-word"> 
                             Right click and Save Target As... to download file.                        </div>                
@@ -466,7 +437,7 @@
                     
                 </div>
                         </div>
-        <p><strong><img style="margin-top: 5px; margin-bottom: 10px; margin-right: 15px" alt="" title="" src="images/stories/privacy-policy.jpg" align="left" height="119" width="159">WorldsLastChance</strong><strong><sup>®</sup></strong><strong>.com</strong>
+        <p><strong><img style="margin-top: 5px; margin-bottom: 10px; margin-right: 15px" alt="" title="" src="images/stories/privacy-policy.jpg" align="left" width="159" height="119">WorldsLastChance</strong><strong><sup>®</sup></strong><strong>.com</strong>
 ("<strong>WorldsLastChance.com</strong>",
 "we",
 or, "us")
@@ -507,7 +478,7 @@ Your Profile &amp; Notifications" button. &nbsp;Here you can also easily change 
 <li>Email us at <a title="" href="mailto:abuse@worldslastchance.com"><u>abuse@worldslastchance.com</u></a> and request to be unsubscribed from any or all mail streams.&nbsp;</li>
 <li>Write to us at:&nbsp;
 World's Last Chance&nbsp;| &nbsp;Sun Terrace House, Golden Rock &nbsp;| &nbsp;Liburd's Estate &nbsp;| &nbsp;Nevis, Saint Kitts and Nevis -&nbsp;and&nbsp;request to be unsubscribed from any or all mail streams&nbsp;.</li>
-<li>Call us at:&nbsp;<strong><font color="#0000ff">+1-869-469-3728</font></strong>&nbsp;-&nbsp;and request to be unsubscribed from any or all mail streams.</li></ol>WLC deeply respects your privacy and we will only send you the mail for which you opt-in or subscribe. &nbsp;<br>
+<li>Call us at:&nbsp;<strong><font color="#0000ff">+1-869-469-3272</font></strong> -&nbsp;and request to be unsubscribed from any or all mail streams.</li></ol>WLC deeply respects your privacy and we will only send you the mail for which you opt-in or subscribe. &nbsp;<br>
 Please do not hesitate to <a title="" href="http://www.worldslastchance.com/contact-us"><u>contact us</u></a> if you need assistance with opting-out or opting-in to any mail stream. <br>
 <br><br>
 <div>
@@ -517,14 +488,14 @@ Please do not hesitate to <a title="" href="http://www.worldslastchance.com/cont
 <br></font></p>
 <h4><font face="Georgia"><strong>How To Contact Us</strong></font></h4>
 <p>Should you have any questions or concerns about the Policy, please send an e-mail to <u><a href="mailto:abuse@WorldsLastChance.com" title="">abuse@WorldsLastChance.com.</a></u></p>
-<p><strong>World's Last Chance<sup>®</sup>&nbsp; | &nbsp;Sun Terrace House, Golden Rock &nbsp;| &nbsp;Liburd's Estate &nbsp;| &nbsp;Nevis, Saint Kitts and Nevis &nbsp;| <font color="#0000ff"><span>+1-869-469-3728</span></font></strong></p>
+<p><strong>World's Last Chance<sup>®</sup>&nbsp; | &nbsp;Sun Terrace House, Golden Rock &nbsp;| &nbsp;Liburd's Estate &nbsp;| &nbsp;Nevis, Saint Kitts and Nevis &nbsp;| <font color="#0000ff"><span>+1-869-469-3272</span></font></strong></p>
 <p align="left">Thank you, kindly.<br>
 <br></p>
 <hr>
 <div align="center"><font face="Times New Roman" size="1">World's Last Chance<sup>®</sup> and WLC<sup>®</sup> are both registered Trademarks with the United States Patent and Trademark Office.</font></div></div>
          <div class="commentBlogView" style="float:right">
             <div class="show-hit">
-                Hits: 83740            </div>
+                Hits: 88701            </div>
          </div>                
 
     </div>
@@ -649,7 +620,7 @@ Please do not hesitate to <a title="" href="http://www.worldslastchance.com/cont
         <a href="#page" class="anchor">Back to Top</a>
         <div class="copyright">
             A Biblically-based community focused on prophetic truths revealing the imminent return of the Saviour.<br>
-            Copyright © 2004-2016 by World's Last Chance<sup>®</sup>. World’s Last Chance and WLC are both registered trademarks with the U.S. Patent &amp; Trademark Office.
+            Copyright © 2004-2017 by World's Last Chance<sup>®</sup>. World’s Last Chance and WLC are both registered trademarks with the U.S. Patent &amp; Trademark Office.
         </div>
     </div>   
 </div>
@@ -657,9 +628,36 @@ Please do not hesitate to <a title="" href="http://www.worldslastchance.com/cont
 <!-- End wrapper -->
 </div></div>
 <div id="space"></div>
+<script src="https://www.worldslastchance.com/assets/js/front/js_combine.js" type="text/javascript"></script>
+<script type="text/javascript">
+    var base_url = 'https://www.worldslastchance.com/';
+    function goToByScroll(id) {
+        $('html,body').animate({scrollTop: $("#" + id).offset().top}, 'slow');
+    }
+</script>
 
+<!--[if lte IE 7]>
+<link href="https://www.worldslastchance.com/assets/css/front/ie7.css" rel="stylesheet" type="text/css" media="screen" />
+<![endif]-->
+<!--[if gte IE 9]>
+<link href="https://www.worldslastchance.com/assets/css/front/ie9.css" rel="stylesheet" type="text/css" media="screen" />
+<![endif]-->
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-7714890-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+
+</script>
 <script>
-
     $(document).ready(function () {
         $(".lightbox").colorbox();
 
