--- a/l/li/lim/limabeads.com.html
+++ b/l/li/lim/limabeads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the limabeads.com privacy policy that was archived on 2016-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161222142442id_/http%3A//www.limabeads.com/store/content/PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the limabeads.com privacy policy that was archived on 2017-04-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170401145810id_/http%3A//www.limabeads.com/store/content/PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="internetarchive internetarchive0"><head>
 	<meta charset="utf-8">
@@ -10,7 +10,7 @@
 	<title>Privacy Policy - Lima Beads</title>
 	
 		
-	<link href="/css/_c/lima.v1479929809.css" type="text/css" rel="stylesheet" title="Lima Beads Main Stylesheet">
+	<link href="/css/_c/lima.v1490022004.css" type="text/css" rel="stylesheet" title="Lima Beads Main Stylesheet">
 	<style type="text/css" media="all">@import "/css/_c/retro.v1458267549.css";</style>
 	<style type="text/css" media="all">@import "/css/jquery/thickbox.v1458267549.css";</style>
 	
@@ -150,17 +150,16 @@
 							<li><a href="/Seed-Beads-C4247">Seed Beads</a></li>
 							<li><a href="/Cubic-Zirconia-Beads-C653">Cubic Zirconia</a></li>
 							<li><a href="/Tagua-Nut-Beads-C5858">Tagua Nuts</a></li>
-							<li><a href="/Tibetan-Beads-C9895">Tibetan Beads</a> <span class="new">New</span></li>
+							<li><a href="/Tibetan-Beads-C9895">Tibetan Beads</a></li>
 							<li><a href="/Paper-Beads-C7451">Paper Beads</a></li>
 							<li><a href="/Lampwork-Glass-Beads-C4226">Lampwork Glass</a></li>
 							<li><a href="/Recycled-Glass-Beads-C7543">Recycled Glass</a></li>
 							<li><a href="/Large-Hole-Beads-C8338">Large Hole</a></li>
 							
-							<li><a href="/Ceramic-Beads-C3810">Ceramic</a></li>
+							<li><a href="/Ceramic-Porcelain-Beads-C3810">Ceramic &amp; Porcelain</a> <span class="new">New</span></li>
 							<li><a href="/Polymer-Clay-Beads-C3809">Polymer Clay</a></li>
 							<li><a href="/Wood-Seed-Beads-C874">Wood</a></li>
-							<li><a href="/Trade-Beads-C8954">Trade Beads</a></li>							<li><a href="/Special-Buy-Beads-C5212">Special Buy Beads</a> <span class="new">Save</span></li>
-						</ul>
+							<li><a href="/Trade-Beads-C8954">Trade Beads</a></li>						</ul>
 					</div>
 					<div class="features">
 						<div class="feature span-1">
@@ -178,21 +177,21 @@
 					<div class="links">
 						<ul>
 							<li class="primary"><a href="/Charms-Pendants-C3800">Shop Charms &amp; Pendants <span class="symbol">►</span></a></li>
-							<li><a href="/Metal-Charms-Pendants-C3802">Metal</a></li>
-							<li><a href="/Gemstone-Charms-Pendants-C5856">Gemstone</a></li>
-							<li><a href="/Tagua-Nut-Charms-Pendants-C5857">Tagua Nuts</a></li>
+							<li><a href="/Acrylic-Charms-Pendants-C5221">Acrylic</a></li>
 							<li><a href="/Cabochons-Charms-Pendants-C1011">Cabochons</a></li>
+							<li><a href="/Ceramic-Charms-Pendants-C3814">Ceramic</a></li>
+							<li><a href="/Crystal-Charms-Pendants-C7955">Crystal</a></li>
+							<li><a href="/Focal-Components-C10348">Focal Components</a> <span class="new">New</span></li>
+							<li><a href="/Gemstone-Charms-Pendants-C5856">Gemstone</a></li>
 							<li><a href="/Glass-Charms-Pendants-C5923">Glass</a></li>
 							<li><a href="/Leather-Charms-Pendants-C9052">Leather</a></li>
 							<li><a href="/Lockets-C3804">Lockets</a></li>
-							<li><a href="/Acrylic-Charms-Pendants-C5221">Lucite</a></li>
+							<li><a href="/Metal-Charms-Pendants-C3802">Metal</a></li>
 							<li><a href="/Polymer-Clay-Charms-Pendants-C5006">Polymer Clay</a></li>
-							<li><a href="/Ceramic-Charms-Pendants-C3814">Ceramic</a></li>
-							<li><a href="/Crystal-Charms-Pendants-C7955">Crystal</a></li>
+							<li><a href="/Tassels-C10302">Tassels</a> <span class="new">New</span></li>
+							<!--<li><a href="/Tagua-Nut-Charms-Pendants-C5857">Tagua Nuts</a></li>-->
 							<li><a href="/Tibetan-C9898">Tibetan</a>
 							</li><li><a href="/Wood-Charms-Pendants-C5096">Wood</a></li>
-							<li><a href="/Tassels-C10302">Tassels</a> <span class="new">New</span></li>
-							<li><a href="/Focal-Components-C10348">Focal Components</a> <span class="new">New</span></li>
 						</ul>
 					</div>
 				</div>
@@ -345,6 +344,14 @@
 							<li><a href="/fresh/beaders/">Find Beaders</a></li>
 							<li><a href="/fresh/daily/">The Lima Blog</a></li>
 						</ul>
+						<ul>
+							<li class="primary">Trends:</li>
+							<li><a href="/Bolo-Necklace-C11539">Bolo Necklace</a></li>
+							<li><a href="/Make-a-Stretch-Bracelet-T92">Stretch Bracelets</a></li>
+							<li><a href="/Mala-Necklace-C10845">Mala Necklace</a></li>
+							<li><a href="/Chandelier-Earrings-C11088">Chandelier Earrings</a></li>
+							<li><a href="/Greek-Charms-C10919">Greek Charms</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -353,7 +360,7 @@
 </div>
 
 <div id="siteMain">
-	<div id="globalPromoBanner" class="global-banner" style="background: #9c1331; border-bottom: 1px solid #9c1331; text-shadow: 0px 0px 2px #9c1331; font-size: 16px; color: #ffffff;"><a href="/Sunday-Circular-December-18-2016-C10913" style="font-weight:bold;color:#ffffff;">Holiday Dollar Days: Save on 1,400 Strands &amp; Supplies</a> | <a href="/store/promo/2016/GiftGiveaway" style="font-weight:bold;color:#ffffff;">Choose a FREE Gift with your order</a>
+	<div id="globalPromoBanner" class="global-banner" style="background: #f9585f; border-bottom: 1px solid #d64b51; text-shadow: 0px 0px 3px #662326; font-size: 16px; color: #ffffff;"><a href="/" style="color: #fff; font-weight: bold;">Save on your whole order with code MAD4MARCH</a>
 </div>
 
 
@@ -541,7 +548,7 @@
 		</div>
 		
 		<div class="footerSection">
-			<p class="copyright also">All images, content, and code ©2002-2016 Lima Beads. All rights reserved. See our <a href="/store/content/PrivacyPolicy">Privacy Policy</a>.</p>
+			<p class="copyright also">All images, content, and code ©2002-2017 Lima Beads. All rights reserved. See our <a href="/store/content/PrivacyPolicy">Privacy Policy</a>.</p>
 		</div>
 		
 	</div>
@@ -560,4 +567,4 @@
 
 
 
-<!-- Freshly generated in 0.38225078582764--></body></html>
+<!-- Freshly generated in 0.71658992767334--></body></html>
