ons.gov.uk (archived on 2017-04-02)
{
  "alexa_rank": 33474,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2528,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.99,
  "homepage_snapshot_redirected_domain": "ons.gov.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170402173720id_/https://www.ons.gov.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170402173720id_/http%3A//ons.gov.uk",
  "interval": "2017_A",
  "link_text": "Cookies and privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ons.gov.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170402072644id_/https%3A//www.ons.gov.uk/help/cookiesandprivacy",
  "policy_title": "Cookies and Privacy - Office for National Statistics",
  "policy_url": "ons.gov.uk/help/cookiesandprivacy",
  "sha1": "6255dcddb244de794fa63b2dcd855a9ac2586fbd",
  "simhash": 15683416325429126107,
  "simhash_updated": true,
  "site_hostname": "ons.gov.uk",
  "site_url": "http://ons.gov.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170402072644",
  "word_count": 407,
  "year": 2017
}

--- a/o/on/ons/ons.gov.uk.html
+++ b/o/on/ons/ons.gov.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ons.gov.uk privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120115303id_/http%3A//www.ons.gov.uk/help/cookiesandprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ons.gov.uk privacy policy that was archived on 2017-04-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170402072644id_/https%3A//www.ons.gov.uk/help/cookiesandprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,16 +14,16 @@ Cookies and Privacy
 <meta name="apple-mobile-web-app-status-bar-style" content="#58595B">
 <!--[if IE]><![endif]-->
 <!--[if lte IE 8]>
-		<link rel="stylesheet" href="/assets/css/old-ie.css"/>
+		<link rel="stylesheet" href="//cdn.ons.gov.uk/sixteens/1f354a7/css/old-ie.css"/>
 		<![endif]-->
 <!--[if IE 9]>
-              <link rel="stylesheet" type="text/css" href="/assets/css/ie-9.css">
+              <link rel="stylesheet" type="text/css" href="//cdn.ons.gov.uk/sixteens/1f354a7/css/ie-9.css">
         <![endif]-->
 <!--[if gt IE 9]><!-->
-<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+<link rel="stylesheet" type="text/css" href="//cdn.ons.gov.uk/sixteens/1f354a7/css/main.css">
 <!--[endif]---->
 </head>
-<body class="static_page js viewport-lg">
+<body class="static_page">
 <header>
 <a class="skiplink" href="#main" tabindex="0">
 Skip to main content
@@ -31,24 +31,23 @@ Skip to main content
 <div id="pagePath" class="hide">/help/cookiesandprivacy</div>
 <div class="beta-banner">
 <div class="wrapper">
-<p>We are improving our online services and you can help by sharing your needs and opinions in our <a href="https://www.surveymonkey.co.uk/r/8CPWTXQ" target="_blank">short survey</a></p>
 </div>
 </div>
 <div class="wrapper">
 <div class="header col-wrap">
 <div class="col col--lg-one-third col--md-one-third">
 <a href="/">
-<img class="main-logo" src="/assets/img/ons-logo.svg" alt="Office for National Statistics">
+<img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo.svg" alt="Office for National Statistics">
 </a>
 </div>
 <div class="col col--lg-two-thirds col--md-two-thirds hide--sm print--hide language--js__container">
-<dl class="language js--hide" style="display: none;">
+<dl class="language js--hide">
 <dt class="language__title">Language:</dt>
 <dd class="language__item">
-<a href="&#10;&#10;&#10;&#10;    //cy.ons.gov.uk/help/cookiesandprivacy&#10;" class="language__link icon--hide">Cymraeg (CY)</a>
+<a href="&#10;&#10;&#10;&#10;    //cy.ons.gov.uk/help/cookiesandprivacy&#10;" class="language__link">Cymraeg (CY)</a>
 </dd>
 </dl>
-<form class="language language--js js--show" style="display: block;">
+<form class="language language--js js--show">
 <label class="language--js__label" for="lang">Language:</label>
 <select class="language--js__select" id="lang" name="lang">
 <option value="english" data-url="
@@ -80,6 +79,9 @@ Skip to main content
 <li class="secondary-nav__item">
 <a class="secondary-nav__link  js-nav-clone__link" href="/aboutus">About</a>
 </li>
+<li class="secondary-nav__item">
+<a class="secondary-nav__link js-nav-clone__link" target="_blank" rel="noopener noreferrer" href="https://blog.ons.gov.uk/">Blog</a>
+</li>
 </ul>
 </div>
 </div>
@@ -98,7 +100,7 @@ Skip to main content
 </a>
 </li>
 </ul>
-<div class="wrapper nav-main--hidden" id="nav-primary" aria-expanded="false">
+<div class="wrapper nav-main--hidden" id="nav-primary">
 <ul class="primary-nav__list">
 <li class="primary-nav__item  js-nav hide--sm old-ie--display-block"><a class="primary-nav__link col col--md-7 col--lg-9" href="/">Home</a></li>
 <li class="primary-nav__item js-nav js-expandable ">
@@ -286,7 +288,7 @@ You might also be interested in:
 <div class="tiles__content--nav">
 <ul class="list--neutral">
 <li><a href="/aboutus/contactus/generalandstatisticalenquiries">General and statistical enquiries</a></li>
-<li><a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage" target="_blank">Google Analytics Cookie Usage on Websites</a></li>
+<li><a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage">Google Analytics Cookie Usage on Websites</a></li>
 </ul>
 </div>
 </div>
@@ -339,16 +341,16 @@ You might also be interested in:
 <h3 class="footer-nav__heading">Connect with us</h3>
 <ul class="footer-nav__list">
 <li class="footer-nav__item">
-<a href="https://twitter.com/ONS" class="icon--hide" target="_blank">Twitter</a>
+<a href="https://twitter.com/ONS">Twitter</a>
 </li>
 <li class="footer-nav__item">
-<a href="https://www.facebook.com/ONS" class="icon--hide" target="_blank">Facebook</a>
+<a href="https://www.facebook.com/ONS">Facebook</a>
 </li>
 <li class="footer-nav__item">
-<a href="https://www.linkedin.com/company/office-for-national-statistics" class="icon--hide" target="_blank">LinkedIn</a>
+<a href="https://www.linkedin.com/company/office-for-national-statistics">LinkedIn</a>
 </li>
 <li class="footer-nav__item">
-<a href="https://public.govdelivery.com/accounts/UKONS/subscribers/new" class="icon--hide" target="_blank">Email alerts</a>
+<a href="https://public.govdelivery.com/accounts/UKONS/subscribers/new">Email alerts</a>
 </li>
 </ul>
 </div>
@@ -359,19 +361,19 @@ You might also be interested in:
 <div class="footer-license">
 <img class="footer-license__img" alt="OGL" width="60" src="/img/ogl.png">
 <p class="footer-license__text margin-left-sm--0">
-All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" target="_blank">Open Government Licence v3.0</a> <span class="icon icon-external--light-small"></span>, except where otherwise stated
+All content is available under the <a class="icon--hide" href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence v3.0</a> <span class="icon icon-external--light-small"></span>, except where otherwise stated
 </p>
 </div>
 </div>
 </div>
-<div id="viewport-sm" class="js-viewport-size"></div><div id="viewport-md" class="js-viewport-size"></div><div id="viewport-lg" class="js-viewport-size"></div></footer>
-<!--[if gt IE 8]><!--><a id="bugherd-feedback" href="mailto:project-cwz4globzxvnj84jsovora@bugs.bugherd.com?subject=Feedback - www.ons.gov.uk/help/cookiesandprivacy&amp;body=Page Title:&#10;    Cookies and Privacy&#10;%0D%0APage URI:www.ons.gov.uk/help/cookiesandprivacy%0D%0A%0D%0AYour feedback:%0D%0A" tabindex="0" class="mini print--hide">Send Feedback</a><!--[endif]---->
+</footer>
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
-var loop11_key = "0104054b3b56d396b42e668dfe096cee161454a8";
-document.write(unescape("%3cscript src='//cdn.loop11.com/my/loop11.js' type='text/javascript'%3e%3c/script%3e"));
+    var loop11_key = "0104054b3b56d396b42e668dfe096cee161454a8";
+    document.write(unescape("%3cscript src='//cdn.loop11.com/my/loop11.js' type='text/javascript'%3e%3c/script%3e"));
 </script><script src="//cdn.loop11.com/my/loop11.js" type="text/javascript"></script>
 <!--[if gt IE 8]><!-->
-<script type="text/javascript" src="/assets/js/babbage.js"></script>
+<script type="text/javascript" src="//cdn.ons.gov.uk/sixteens/1f354a7/js/main.js"></script>
+<script type="text/javascript" src="/js/app.js"></script>
 <!--[endif]---->
 <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -379,6 +381,15 @@ document.write(unescape("%3cscript src='//cdn.loop11.com/my/loop11.js' type='tex
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             ga('create', 'UA-56892037-3', {'allowAnchor': true});
+            (function () {
+                var pageType = 'static_page';
+                if (pageType == 'home_page' ||
+                    pageType == 'taxonomy_landing_page' ||
+                    pageType == 'static_landing_page' ||
+                    pageType == 'list') {
+                        ga('set', 'contentGroup1', 'Navigation');
+                }
+            })();
             ga('send', 'pageview', {'page': location.pathname + getSearch() + location.hash});
             function getSearch(){
                 if(location.pathname === '/search'){
