--- a/t/tr/tra/tradervue.com.html
+++ b/t/tr/tra/tradervue.com.html
@@ -1,19 +1,17 @@
-<!--The following is the downloaded HTML source of the tradervue.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120202318id_/http%3A//www.tradervue.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tradervue.com privacy policy that was archived on 2017-04-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170402123001id_/https%3A//www.tradervue.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en" class=""><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
+<!DOCTYPE html><html lang="en"><head>
+<script src="https://js-agent.newrelic.com/nr-1026.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"8b4d37f31b","applicationID":"2598411","transactionName":"JVgPTUIMVA4HR0wVUAFSEhZAEVEUA1Ya","queueTime":0,"applicationTime":13,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1026.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
   <title>
     Tradervue | Privacy Policy
   </title>
   
-  <link rel="stylesheet" media="all" href="/assets/application-96e217c6b37c3a5bf8937c6f8b49b2c9.css">
-  <script src="/assets/application-4bc67ea88be51c1b161fcf0d954d1200.js"></script>
+  <link rel="stylesheet" media="all" href="/assets/application-2a4dcba7af55e5d31158dddc27ef0438dae28efe603e0f5c03a6434809e5f0de.css">
+  <script src="/assets/application-99ba162f5268620d5f0c3b511f799be1348a05bda75d275ddefca23c45e4db5e.js"></script>
   <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="erJA1ZA6MsbfTg1RhwXSGfoycPAxwcFESt4u7zRrc7XenRcAN6aHtDuXzk+5z8uAh2F0L8I82oBmFvX6htHgPw==">
-
-  <!--[if lt IE 8]>
-    <link rel="stylesheet" media="all" href="/assets/font-awesome-ie7.min-af835a33e9caf252b5994f20690983ed.css" />
-  <![endif]-->
+<meta name="csrf-token" content="mRxcwI7tUJHvjeFDqEdKbcwxlvsxGpyDeN5NvAXjvPAMf99BdyzUjtyuBgcYVJPQU2/HxjNw4Ct/F39KwTW1tQ==">
 
    <!--[if lt IE 9]>
      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -42,13 +40,13 @@
 
 </script>
 
-<style type="text/css">.fancybox-margin{margin-right:0px;}</style></head>
+</head>
 <body>
 <div class="container">
   <header>
     <div class="header_image">
     <a href="/">
-      <img alt="Tradervue" class="retina retina-off" width="202" data-retina="/assets/tvlogo1@2x-11f601144edd842b9fc87e8c52372f95.png" src="/assets/tvlogo1-562a077efd9ea088c95edbca956af59e.png">
+      <img alt="Tradervue" class="retina" width="202" data-retina="/assets/tvlogo1@2x-001e5003fa5cd495e7f2d2ce4d2602168897460871a2f746b5468e0e88dc0269.png" src="/assets/tvlogo1-84b9fadc63aa9f8db63302e40dbf006dd2c6f125aba16df433fa6136116a30d3.png">
     </a>
   </div>
 
@@ -112,7 +110,7 @@
 
   
   <footer>
-  <p>© 2011-2016 Tradervue LLC, all rights reserved.<br>
+  <p>© 2011-2017 Tradervue LLC, all rights reserved.<br>
       <a href="http://www.tradervue.com/about">About</a> | 
       <a href="http://www.tradervue.com/termsofservice">Terms of Service</a> | 
       <a href="http://www.tradervue.com/privacy">Privacy Policy</a> |
@@ -128,35 +126,7 @@
 
   
 </div>
-  <!-- Start of StatCounter Code -->
-<script type="text/javascript">
-var sc_project=7004523; 
-var sc_invisible=1; 
-var sc_security="1945057f"; 
-var sc_https=1; 
-var sc_remove_link=1; 
-var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" +
-scJsHost +
-"statcounter.com/counter/counter.js'></"+"script>");</script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
-
-<noscript><div class="statcounter"><img class="statcounter"
-src="https://c.statcounter.com/7004523/0/1945057f/1/"
-alt="website statistics" ></div></noscript>
-<!-- End of StatCounter Code -->
   
-<script type="text/javascript">if (typeof NREUMQ !== "undefined") { if (!NREUMQ.f) { NREUMQ.f=function() {
-NREUMQ.push(["load",new Date().getTime()]);
-var e=document.createElement("script");
-e.type="text/javascript";
-e.src=(("http:"===document.location.protocol)?"http:":"https:") + "//" +
-  "js-agent.newrelic.com/nr-100.js";
-document.body.appendChild(e);
-if(NREUMQ.a)NREUMQ.a();
-};
-NREUMQ.a=window.onload;window.onload=NREUMQ.f;
-};
-NREUMQ.push(["nrfj","bam.nr-data.net","8b4d37f31b","2598411","JVgPTUIMVA4HR0wVUAFSEhZAEVEUA1Ya",0,10,new Date().getTime(),"","","","",""]);}</script>
 
-<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+
+</body></html>
