naxos.com (archived on 2017-04-09)
{
  "alexa_rank": 87708,
  "analysis_subcorpus": true,
  "categories": "education;entertainment",
  "char_count": 5938,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.46,
  "homepage_snapshot_redirected_domain": "naxos.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170330190801id_/http://www.naxos.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170330190801id_/http%3A//naxos.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "naxos.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170409044846id_/http%3A//www.naxos.com/h_privacy.asp",
  "policy_title": "Naxos Privacy Policy-Naxos.com",
  "policy_url": "naxos.com/h_privacy.asp",
  "sha1": "9b044caccf7230ca70b0cf707e8bc67bf035c912",
  "simhash": 8518974233568846279,
  "simhash_updated": false,
  "site_hostname": "naxos.com",
  "site_url": "http://naxos.com",
  "smog": 18.49,
  "strict_updated": false,
  "timestamp": "20170409044846",
  "word_count": 934,
  "year": 2017
}

--- a/n/na/nax/naxos.com.html
+++ b/n/na/nax/naxos.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the naxos.com privacy policy that was archived on 2016-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161122033221id_/http%3A//www.naxos.com/h_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the naxos.com privacy policy that was archived on 2017-04-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170409044846id_/http%3A//www.naxos.com/h_privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
                 <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-PHMNH8"></script><script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
@@ -18,14 +18,14 @@
         <meta http-equiv="Content-Type" content="text/html;charset= ISO-8859-1">
 
         
-		<link rel="stylesheet" type="text/css" href="http://cdn.naxos.com/css/main.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
 		
 		<link rel="shortcut icon" href="http://cdn.naxos.com/favicon.ico">
 <link rel="alternate" type="application/rss+xml" title="All New Releases" href="/rss/CArssgenerator.asp?type=newreleases&amp;filter=All Labels"> 
-		<script type="text/javascript" src="http://cdn.naxos.com/javascript/helperfunctions.js"></script>
-		<script type="text/javascript" src="http://cdn.naxos.com/javascript/predefined.js"></script>
-		<script type="text/javascript" src="http://www.naxos.com/javascript/nxsajax.js"></script>
-		<script type="text/javascript" src="http://www.naxos.com/javascript/jquery_aky.js"></script>
+		<script type="text/javascript" src="/javascript/helperfunctions.js"></script>
+		<script type="text/javascript" src="/javascript/predefined.js"></script>
+		<script type="text/javascript" src="/javascript/nxsajax.js"></script>
+		<script type="text/javascript" src="/javascript/jquery_aky.js"></script>
 
 		<script>
 			$(function () {  
@@ -168,8 +168,8 @@
             </style>
 
 		
-		    	<script type="text/javascript" src="http://cdn.naxos.com/javascript/menucode.js"></script>
-	            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+		    	<script type="text/javascript" src="/javascript/menucode.js"></script>
+	            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 			
 			
 			
@@ -205,8 +205,8 @@
         
 		<table width="809" border="0" align="center" cellpadding="0" cellspacing="0">
 			<tbody><tr><td width="1" bgcolor="#000000"><img src="http://cdn.naxos.com/images/blank.gif" width="1" height="1"></td>
-			
-					<td width="117"><a href="/"><img src="http://cdn.naxos.com/images/logo.gif" alt="Classical Music Home" title="Classical Music Home" width="117" height="110" border="0"></a></td>
+
+					<td width="117"><a href="/"><img src="http://cdn.naxos.com/images/labels/naxos30.jpg" alt="Classical Music Home" title="Classical Music Home" width="117" height="110" border="0"></a></td>
 					<td width="280" style="background-image:url(http://cdn.naxos.com/images/top_mid.gif); font-family: Times New Roman, Times, serif;" class="header">
                         <div class="HHeader">
                             <div class="socialmedia"><a href="http://www.facebook.com/naxos" title="Facebook" target="_blank"><img src="/images/socialmedia/facebook.png" width="30" height="30"></a></div>
@@ -542,7 +542,7 @@
 								<ul style="FONT-WEIGHT: normal; FONT-SIZE: 10px"> 
 									<li><a class="item2" href="#" alt="Naxos Global Site" title="Naxos Global Site">Global Site</a></li> 
 									<li><a class="item2" target="_blank" href="http://www.savd.com.au/" alt="Australia" title="Australia">Australia</a></li> 
-									<li><a class="item2" target="_blank" href="http://www.naxos.com/naxos/countries/canada/" alt="Canada" title="Canada">Canada</a></li> 
+									<li><a class="item2" target="_blank" href="http://www.naxos.com/naxos/countries/usa/" alt="Canada" title="Canada">Canada</a></li> 
 									<li><a class="item2" target="_blank" href="http://www.naxos.com.cn/" alt="China" title="China">China</a></li> 
 									<li><a class="item2" target="_blank" href="http://www.naxosdirect.dk/" alt="Denmark" title="Denmark">Denmark</a></li> 
 									<li><a class="item2" target="_blank" href="http://www.fg-naxos.fi/" alt="Finland" title="Finland">Finland</a></li> 
@@ -778,7 +778,6 @@
                                     <a href="http://www.naxosspokenwordlibrary.com/" target="_blank"><div class="subLinks">Naxos Spoken Word Library</div></a>
                                     <a href="http://www.naxosradio.com/" target="_blank"><div class="subLinks">Naxos Radio</div></a>
                                     <a href="http://www.naxosvideolibrary.com/" target="_blank"><div class="subLinks">Naxos Video Library</div></a>
-                                    <a href="http://shop.classicsonline.com/" target="_blank"><div class="subLinks">ClassicsOnline</div></a>
                                 </td>
                                 <td></td>
                                 <td style="vertical-align:top;">
@@ -805,7 +804,7 @@
                         </tbody></table><br><br>
                     </div>
                     <div class="BottomFooter">
-                        <div class="CopyRight">Copyright © 2016 Naxos Digital Services Ltd. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/h_terms.asp" class="TermsPolicy">Terms of Use</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/h_privacy.asp" class="TermsPolicy">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-246-</div>
+                        <div class="CopyRight">Copyright © 2017 Naxos Digital Services Ltd. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/h_terms.asp" class="TermsPolicy">Terms of Use</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/h_privacy.asp" class="TermsPolicy">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-249-</div>
                     </div>
                 </td>
                 <td width="1" bgcolor="#000000"><img src="/images/blank.gif" width="1" height="1" alt="">
